<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_film_cardview"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/dark_gray"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/view_film_poster_imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_film_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/default_film_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_film_genres_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_film_categorie"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/view_film_voteAverage_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/star_icon"
                    android:drawablePadding="3dp"
                    android:drawableTint="@color/yellow"
                    android:gravity="center_vertical"
                    android:text="@string/default_film_rating"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/view_film_voteCount_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/eye_icon"
                    android:drawablePadding="3dp"
                    android:gravity="center_vertical"
                    android:text="@string/default_film_voteCount"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <TextView
                android:id="@+id/view_film_time_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/clock_icon"
                android:drawablePadding="3dp"
                android:gravity="center_vertical"
                android:text="@string/default_film_time"
                android:textColor="@color/gray" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
