<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_film_poster_imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_film_title_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_film_title"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_film_genres_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_film_categorie"
                android:textColor="@color/gray"
                android:layout_marginTop="3dp"/>

            <TextView
                android:id="@+id/detail_film_synopsis_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_film_synopsis"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/detail_film_rating_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/test"
                    android:drawableStart="@drawable/star_icon"
                    android:drawablePadding="3dp"
                    android:drawableTint="@color/yellow"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/default_film_rating"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_film_time_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/test"
                    android:drawableStart="@drawable/clock_icon"
                    android:drawablePadding="3dp"
                    android:drawableTint="@color/yellow"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/default_film_rating"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_film_releaseDate_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/test"
                    android:padding="8dp"
                    android:text="@string/default_film_releaseDate"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/recommandations"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_film_recommendation_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
