<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/black"
    android:id="@+id/view_film_cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="18dp">

            <ImageView
                android:id="@+id/view_film_poster_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/view_film_title_textView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/default_film_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/view_film_genres_textView"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:text="@string/default_film_categorie"
            android:textColor="@color/gray"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/view_film_rating_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/star_icon"
            android:drawablePadding="3dp"
            android:drawableTint="@color/yellow"
            android:gravity="center_vertical"
            android:text="@string/default_film_rating"
            android:textSize="13sp"
            android:textColor="@color/gray"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>